NIFI-1355-2 - Updated based on PR feedback. Refactored and removed unnecessary unit tests in KeyStoreUtilsGroovyTest. Changed the use of Path.of() to Paths.get() for backwards compatibility.