@@ -22,7 +22,7 @@ import java.lang.reflect.Field;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import javax.net.ssl.SSLContext;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -68,7 +68,7 @@ public class TestInvokeHTTP extends TestInvokeHttpCommon {
         if (tlsConfiguration != null) {
             try {
                 if (StringUtils.isNotBlank(tlsConfiguration.getKeystorePath())) {
-                    Files.deleteIfExists(Path.of(tlsConfiguration.getKeystorePath()));
+                    Files.deleteIfExists(Paths.get(tlsConfiguration.getKeystorePath()));
                 }
             } catch (IOException e) {
                 throw new IOException("There was an error deleting a keystore: " + e.getMessage(), e);
@@ -76,7 +76,7 @@ public class TestInvokeHTTP extends TestInvokeHttpCommon {
 
             try {
                 if (StringUtils.isNotBlank(tlsConfiguration.getTruststorePath())) {
-                    Files.deleteIfExists(Path.of(tlsConfiguration.getTruststorePath()));
+                    Files.deleteIfExists(Paths.get(tlsConfiguration.getTruststorePath()));
                 }
             } catch (IOException e) {
                 throw new IOException("There was an error deleting a truststore: " + e.getMessage(), e);
